[project]
name = "quiz-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "fastapi>=0.122.0",
    "httpx>=0.27.0,<0.28.0",
    "matplotlib>=3.10.7",
    "openai>=1.55.3",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "playwright>=1.56.0",
    "pypdf>=6.4.0",
    "pytesseract>=0.3.13",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
    "SpeechRecognition>=3.10.4",
    "pydub>=0.25.1",
]
